add iri download

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
+# R
 .Rproj.user
 .Rhistory
 .RData
 .Ruserdata
+
+# PyEnv
 .python-version
+
+# PyCharm
 .idea/
+
+# Jupyter
+*.ipynb
+.ipynb_checkpoints
